# CADMesh

./: CMakeLists.txt
cmake/Modules/: Findassimp.cmake
examples/cad2gdml/: CMakeLists.txt  cad2gdml.cc
examples/cad2gdml/include/: DetectorConstruction.hh
examples/cad2gdml/src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc
examples/template/src/: DetectorConstruction.cc
g4py/: README  README.md  pyCADMesh.patch
g4py/source/cadmesh/: CMakeLists.txt  GNUmakefile  pyCADMesh.cc  pyG4AssemblyVolume.cc  pymodCADMesh.cc
src/: CADMesh.cc
